fixing the overflow on the x axis

--- a/css/main.css
+++ b/css/main.css
@@ -98,18 +98,18 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 200;
     color: #1fb296;
 }
 
 .description {
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 300;
-    padding-left: 10em;
-    padding-right: 10em;
-    padding-bottom: 100px;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 60px;
 }
 
 .portfolio {
@@ -144,8 +144,8 @@ footer {
         text-align: center;
         font-size: 20px;
         font-weight: 300;
-        padding-left: 5em;
-        padding-right: 5em;
+        padding-left: 1em;
+        padding-right: 1em;
         padding-bottom: 100px;
 }
  
@@ -158,8 +158,8 @@ footer {
     text-align: center;
     font-size: 25px;
     font-weight: 300;
-    padding-left: 10em;
-    padding-right: 10em;
+    padding-left: 12em;
+    padding-right: 12em;
     padding-bottom: 100px;
 }
     
